# edu-radar

./: .gitignore  CONTRIBUTING.md  README.md  README.pl.md  compose.override.yaml  compose.prod.yaml  compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02bea8fed6cd_add_martin_cluster_function.py  0d29d728f7e7_init_schema.py  106083f87bdd_add_index_for_zlikwidowana.py  5d95df04b002_add_ranking_table.py  61773fb4d705_make_foreign_keys_not_null.py  65521748b5cb_add_ranking_table.py  6eaa8b47a1e9_nullable_geom_in_szkola.py  764081c811b1_add_geom_3857_column.py  8b09b66e3ce4_remove_nazwa_skrocona_column.py  931733737e93_add_trigger_for_geom_3857.py  947df3bbefc7_location_foreign_keys_not_null.py  ac30ad5a25a8_add_composite_index_on_szkola_lat_lon.py  ad166e48a56b_init_schema.py  cd818eb49e59_add_kontakt_table.py  db9f404de7d5_init_schema.py  e199d0b886e2_add_partial_gist_indexes_for_szkola.py  f75febc5aa5a_add_ranking_table.py  ff54b79a33d7_add_pg_trgm_extension.py  fff7ba934856_make_regon_and_kod_pocztowy_nullable.py
backend/alembic/versions/sql/: szkola_clustered.sql  szkola_geom_3857_trigger.sql
backend/app/: dependencies.py  main.py
backend/app/api/: exception_handlers.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: contact.py  filters.py  rankings.py  school_types.py  schools.py
backend/app/core/: config.py  database.py  logging.py  sqlalchemy_typing.py  turnstile.py
backend/app/data_import/: main.py  scoring.py  transform.py
backend/app/data_import/api/: exceptions.py  fetcher.py  models.py
backend/app/data_import/api/db/: decomposer.py  excluded_fields.py
backend/app/data_import/config/: api.py  core.py  excel.py  geo.py  score.py
backend/app/data_import/excel/: reader.py
backend/app/data_import/excel/E8_data/: E8_2024.xlsx
backend/app/data_import/excel/db/: table_splitter.py
backend/app/data_import/geo/: exporter.py  importer.py  location_shifter.py
backend/app/data_import/score/: ranking_calculator.py  scorer.py  types.py
backend/app/data_import/utils/: api_request.py  clean_column_names.py  convert_to_camel.py  geo.py  logging_config.py
backend/app/models/: __init__.py  contact.py  exam_results.py  locations.py  mixins.py  ranking.py  schools.py
backend/app/routers/: school_types.py  schools.py
backend/app/schemas/: base.py  bounding_box.py  contact.py  exam_results.py  filters.py  locations.py  mixins.py  ranking.py  ranking_shared.py  school_filters.py  schools.py
backend/app/services/: base_service.py  contact_service.py  convert_school_to_public.py  exceptions.py  filter_options.py  ranking_service.py  school_filters.py  school_service.py  school_type_service.py  turnstile_service.py
backend/data/addresses/: school_addresses.csv
backend/martin/: .env.example  martin.yaml
backend/src/: dependencies.py  main.py
backend/src/app/: dependencies.py
backend/src/app/core/: config.py  database.py
backend/src/app/models/: __init__.py  bounding_box.py  exam_results.py  filters.py  locations.py  mixins.py  ranking.py  schools.py
backend/src/app/routers/: filters.py  school_types.py  schools.py
backend/src/app/schemas/: exam_results.py  filters.py  locations.py  ranking.py  schools.py
backend/src/app/services/: convert_school_to_public.py  map_school_to_public.py  school_filters.py
backend/src/data_import/: main.py  scoring.py  transform.py
backend/src/data_import/api/: fetcher.py  models.py  types.py
backend/src/data_import/config/: api.py  core.py  excel.py  geo.py  score.py
backend/src/data_import/core/: config.py
backend/src/data_import/excel/: reader.py
backend/src/data_import/geo/: address_export.py  exceptions.py  exporter.py  geocoder.py  importer.py  location_shifter.py
backend/src/data_import/score/: ranking_calculator.py  scorer.py
backend/src/data_import/utils/: api_request.py  geo.py  logging_config.py  requests.py
backend/tests/: conftest.py  constants.py
backend/tests/services/: test_school_types_services.py
(+139 files in other folders)
