[project]
name = "backend"
version = "0.1.0"
description = "Backend written in FastAPI for schools ranking on the map app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.127.0",
    "geoalchemy2>=0.18.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "sqlmodel>=0.0.28",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "debugpy>=1.8.19",
    "ruff>=0.14.10",
]

[tool.ruff]
exclude = [
    "**/__pycache__/**",
    "**/*.pyc",
    "venv/**",
    ".venv/**",
    "alembic/versions/**",
]

[tool.ruff.lint]
select = [
    "E4",  # pycodestyle (specifically import conventions like E402)
    "E7",  # pycodestyle errors (comparisons, bare excepts)
    "E9",  # pycodestyle runtime/syntax errors 
    "F",   # Pyflakes (undefined names, unused imports/variables, etc.)
    "B",   # flake8-bugbear (potential bugs and design problems)
    "I",   # isort (import sorting)
    "Q",   # flake8-quotes (quote consistency)
    "ARG", # flake8-unused-arguments (detect unused function arguments)
    "FAST",# flake8-fastapi (FastAPI specific linting rules)
    "N",   # pep8-naming (PEP 8 naming conventions)
    "RUF"  # Ruff-specific rules (built-in rules unique to Ruff)
]

[tool.basedpyright]
# using ruff for unused code (ARG rule)
include = ["src"]
exclude = ["**/__pychache__", "**/*.pyc", "venv", ".venv"]
reportUnusedVariable = "none"
reportUnusedImport = "none"
reportUnusedFunction = "none"
reportUnusedClass = "none"
reportUnusedExpression = "none"
reportImportCycles = "none" # using ORMs it is almost impossible to avoid cycles
